options changes
